# ChangeLog for net-firewall/ipset
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-firewall/ipset/ChangeLog,v 1.56 2011/10/12 14:13:35 pva Exp $

  12 Oct 2011; Peter Volkov <pva@gentoo.org> ipset-6.9.1-r2.ebuild:
  On second thought drop USE=ipv6: userspace should work is the same
  independently of USE=ipv6 and kernel side will depend on kernel
  configuration.

*ipset-6.9.1-r2 (12 Oct 2011)

  12 Oct 2011; Peter Volkov <pva@gentoo.org> +ipset-6.9.1-r2.ebuild,
  +files/ipset.initd-r1, files/ipset.initd:
  Fix init script, bug #386151 wrt Alexey Shvetsov. Require
  CONFIG_IP6_NF_IPTABLES only if USE=ipv6, bug #385445 wrt John Brendler.

*ipset-6.9.1-r1 (02 Oct 2011)

  02 Oct 2011; Peter Volkov <pva@gentoo.org> +ipset-6.9.1-r1.ebuild,
  +files/ipset.initd:
  Drop confusing message about netlink.patch, bug #382221 by John Brendler. Add
  init script by Andrew Savchenko, bug #181045 by Caleb Cushing.

  17 Sep 2011; Peter Volkov <pva@gentoo.org> -files/ipset-2.4.7-LDFLAGS.patch,
  -ipset-4.4.ebuild, -ipset-6.7-r1.ebuild:
  Drop old.

  16 Sep 2011; Tony Vroon <chainsaw@gentoo.org> ipset-4.5.ebuild,
  ipset-6.8.ebuild:
  Marked stable on AMD64 based on arch testing by Ian "idella4" Delaney &
  Tomáš "Mepho" Pružina in bug #381613.

  15 Sep 2011; Andreas Schuerch <nativemad@gentoo.org> ipset-4.5.ebuild,
  ipset-6.8.ebuild:
  x86 stable, see bug 381613

*ipset-6.9.1 (07 Sep 2011)

  07 Sep 2011; Peter Volkov <pva@gentoo.org> +ipset-6.9.1.ebuild:
  Version bump.

*ipset-6.8 (24 Jul 2011)

  24 Jul 2011; Peter Volkov <pva@gentoo.org> +ipset-6.8.ebuild:
  Version bump, thank Ed Wildgoose for report.

  02 Jul 2011; Sven Wegener <swegener@gentoo.org> ipset-6.7-r1.ebuild:
  Use correct source and build options for kernel.

*ipset-6.7-r1 (16 Jun 2011)

  16 Jun 2011; Peter Volkov <pva@gentoo.org> -ipset-6.4.ebuild,
  -ipset-6.6.ebuild, -ipset-6.7.ebuild, +ipset-6.7-r1.ebuild: