@@ -1,6 +1,13 @@
 # ChangeLog for net-firewall/ipset
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-firewall/ipset/ChangeLog,v 1.56 2011/10/12 14:13:35 pva Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-firewall/ipset/ChangeLog,v 1.57 2011/12/17 03:30:59 pva Exp $
+
+*ipset-6.10 (17 Dec 2011)
+
+  17 Dec 2011; Peter Volkov <pva@gentoo.org> +ipset-6.10.ebuild,
+  +files/ipset.confd, +files/ipset.initd-r2:
+  Version bump. Add confd file and make init file workable with list:set, bug
+  #390129 and bug #393243 by Andrew Savchenko.
 
   12 Oct 2011; Peter Volkov <pva@gentoo.org> ipset-6.9.1-r2.ebuild:
   On second thought drop USE=ipv6: userspace should work is the same
